<resources>
    <string name="app_name">Draze</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="new_trip_tracking">New tracking</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="feed">Feed</string>
    <string name="record">Record</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="about">About</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="name_icon">Name icon</string>
    <string name="gender_icon">Gender Icon</string>
    <string name="gender">Gender</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="phone_number">Phone number</string>
    <string name="location_icon">Location Icon</string>
    <string name="location">Location</string>
    <string name="avatar">Avatar</string>
    <string name="my_phone_number">My Phone Number</string>
    <string name="my_name">My Name</string>
    <string name="my_gender">My Gender</string>
    <string name="my_location">My Location</string>
    <string name="profileFragmentTitle">Profile</string>
    <string name="feedFragmentTitle">Feed</string>
    <string name="settingsFragmentTitle">Settings</string>
    <string name="recordFragmentTitle">Record</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="units_of_measure">Units of Measure</string>
    <string name="delete_account">Delete Account</string>
    <string name="alert_icon">Alert Icon</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="map">Map</string>

    <string-array name="account_settings_not_verified">
        <item>Change Username</item>
        <item>Change Email</item>
        <item>Verify Email</item>
        <item>Change Password</item>
    </string-array>

    <string-array name="account_settings_verified">
        <item>Change Username</item>
        <item>Change Email</item>
        <item>Change Password</item>
    </string-array>

    <string-array name="preferences_settings">
        <item>Display</item>
        <item>Legal</item>
        <item>About</item>
        <item>Delete Your Account</item>
        <item>Log Out</item>
    </string-array>

    <string-array name="settings_menu">
        <item>Account</item>
        <item>Preferences</item>
    </string-array>

    <string-array name="display_settings">
        <item>Dark Mode</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="stop">Stop</string>
    <string name="name_your_route">Name your route</string>
    <string name="my_route">My route</string>
    <string name="pick_your_route_color">Pick your route color</string>
    <string name="choose">Choose</string>
    <string name="your_description">Your description...</string>
    <string name="activity">Activity</string>
    <string name="no_tracked_sessions_message">No tracked sessions</string>
    <string name="mapFragmentTitle">Map</string>
    <string name="activities">Activities</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="elevation">Elevation</string>
    <string name="description">Description</string>
    <string name="focus_location">Focus Location</string>
    <string name="style_map">Map Style</string>
    <string name="average_speed">AVERAGE SPEED (km/h)</string>
    <string name="email_not_verified">Your email isn\'t verified!</string>
    <string name="send_another"><u>Send another</u>.</string>
    <string name="no_verification_email">No verification email?</string>
    <string name="your_account_will_be_deleted">If you fail to verify your email, your account will be deleted in 5 hours.</string>
    <string name="check_your_inbox">Please check your inbox and verify your account in order to complete your authentication.</string>
    <string name="loading">Loading…</string>
    <string name="average_speed_simple">Average Speed</string>
    <string name="delete">DELETE</string>
    <string name="acra_toast_text">Please send error message!</string>
    <string name="mail_subject">App Crash</string>
    <string name="mail_body">Draze encountered an error.</string>
    <string name="no_email">Please enter your email</string>
    <string name="no_password">Please enter your password</string>
    <string name="signup">SignUp</string>
    <string name="no_username">Please enter your username</string>

</resources>